@@ -3,6 +3,9 @@
 Beta 1 Version 1.0.0.0
 ======================
 
+- Fixed DYNPROXY-24
+  "DynamicProxy2: missing locks"
+
 - Fixed DYNPROXY-34
   "Cant proxy generic interfaces"
 
